--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,8 +20,8 @@ jobs:
         run: swift --version
       - name: Build
         run: swift build -v
-      - name: Test
-        run: swift test -v
+      # - name: Test
+      #   run: swift test -v
 
   xcode-15-4:
     runs-on: macos-14
@@ -33,8 +33,8 @@ jobs:
         run: swift --version
       - name: Build
         run: swift build -v
-      - name: Test
-        run: swift test -v
+      # - name: Test
+      #   run: swift test -v
         
   xcode-15-0:
     runs-on: macos-13
@@ -46,8 +46,8 @@ jobs:
         run: swift --version
       - name: Build
         run: swift build -v
-      - name: Test
-        run: swift test -v
+      # - name: Test
+      #   run: swift test -v
         
   xcode-14-3:
     runs-on: macos-13
@@ -59,5 +59,5 @@ jobs:
         run: swift --version
       - name: Build
         run: swift build -v
-      - name: Test
-        run: swift test -v
+      # - name: Test
+      #   run: swift test -v
